--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -127,6 +127,105 @@
 	}
 }
 
+.ui-tab-type03 {
+	height: 100%;
+	.ui-tab-menu,
+	.ui-tab-contents {
+		width: 100%;
+	}
+	.ui-tab-menu {
+		display: flex;
+		align-items: center;
+		gap: 8px;
+		> div {
+			display: flex;
+			align-items: center;
+			position: relative;
+			cursor: pointer;
+			padding: 7px 8px 11px 8px;
+			@include transition(all, 0.15s);
+			h2 {
+				display: block;
+				position: relative;
+				font-size: 18px;
+				color: #6d6d6d;
+				font-weight: 400;
+				line-height: 24.3px;
+			}
+			&.on {
+				h2 {
+					color: #fff;
+					&:before {
+						display: block;
+						content: '';
+						width: 100%;
+						height: 2px;
+						background-color: $primary_accent_color;
+						position: absolute;
+						left: 0;
+						bottom: -2px;
+					}
+				}
+			}
+			.ui-tooltip {
+				display: none;
+			}
+		}
+	}
+	.ui-tab-contents {
+		height: calc(100% - 40px);
+		.tab-box {
+			display: none;
+			height: 100%;
+			overflow: hidden;
+			overflow-y: auto;
+			&:first-child {
+				display: block;
+			}
+		}
+	}
+}
+
+.ui-page-history {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	gap: 8px;
+	span {
+		display: block;
+		position: relative;
+		font-size: 12px;
+		color: #b6b6b6;
+		line-height: 17.4px;
+		padding-left: 12px;
+		&:before {
+			width: 4px;
+			height: 7px;
+			@include psuedoBg();
+			background-image: url('../../public/res/images/icons/icon-page-history-arrow.png');
+			position: absolute;
+			top: 50%;
+			left: 0;
+			transform: translateY(-50%);
+		}
+		&:first-child {
+			padding-left: 0;
+			&:before {
+				display: none;
+			}
+		}
+	}
+	.depth2 {
+		color: #fff;
+	}
+}
+
+.ui-dropdown-box {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
 .ui-dropdown-type01 {
 	width: 124px;
 	height: 32px;
