--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -444,11 +444,6 @@ body,
 						}
 					}
 				}
-				.ui-components-box {
-					display: flex;
-					align-items: center;
-					gap: 8px;
-				}
 			}
 			.box-tbl {
 				@extend .box-container-style;
@@ -466,6 +461,17 @@ body,
 						}
 					}
 				}
+			}
+		}
+	}
+	.contents-section-wide {
+		width: 100%;
+		.grid-row-wide {
+			display: flex;
+			flex-direction: column;
+			> div {
+				width: 100%;
+				@extend .box-container-style;
 			}
 		}
 	}
@@ -1030,7 +1036,7 @@ body,
 	}
 }
 .box-cpIssues {
-	height: 100%;
+	height: 942px;
 	.tableWrapper {
 		thead {
 			th {
@@ -1095,5 +1101,33 @@ body,
 	}
 	.ui-chart-container {
 		height: 342px;
+	}
+}
+
+.sub-detail-wrapper {
+	.ui-page-history {
+	}
+	.head {
+		.title {
+			margin-bottom: 12px;
+		}
+	}
+	&.sub-detail-service {
+		.box-components {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			position: relative;
+		}
+		.ui-tab-type03 {
+			width: 100%;
+		}
+		.ui-dropdown-box {
+			position: absolute;
+			top: 0;
+			right: 0;
+		}
+		.row-box {
+		}
 	}
 }
