--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -489,6 +489,11 @@ body,
 				}
 			}
 		}
+		.grid-column-3 {
+			display: flex;
+			align-items: flex-start;
+			justify-content: space-between;
+		}
 	}
 }
 
@@ -1120,7 +1125,9 @@ body,
 }
 
 .sub-detail-wrapper {
+	padding: 0 20px 20px 20px;
 	.ui-page-history {
+		padding-top: 16px;
 	}
 	.head {
 		.title {
@@ -1136,17 +1143,69 @@ body,
 		}
 		.ui-tab-type03 {
 			width: 100%;
+			.ui-tab-menu {
+				margin-bottom: 8px;
+			}
 		}
 		.ui-dropdown-box {
 			position: absolute;
 			top: 0;
 			right: 0;
 		}
+		h3 {
+			color: #fff;
+			font-size: 16px;
+			line-height: 23.2px;
+			margin-bottom: 16px;
+		}
 		.box-lgchannels {
 			height: 484px;
 		}
 		.box-actionPoints {
 			height: 655px;
+			padding-bottom: 20px;
+		}
+		.button-container {
+			width: 100%;
+			display: flex;
+			gap: 12px;
+			align-items: center;
+			margin: 12px 0 16px 0;
+		}
+		.grid-column-3 {
+			> div {
+				padding: 20px;
+				height: 295px;
+				background-color: #282828;
+				border-radius: 16px;
+			}
+			.box-evidence {
+				width: 430px;
+			}
+			.box-des {
+				width: 766px;
+				padding-bottom: 0;
+				table thead th {
+					background-color: #282828;
+				}
+			}
+			.box-actionDetail {
+				width: 588px;
+				textarea {
+					width: 100%;
+					height: 216px;
+					padding: 8px;
+					border: 1px solid rgba(255,255,255,.2);
+					line-height: 20.3px;
+					font-size: 14px;
+					color: #BABABA;
+					background-color: transparent;
+				}
+			}
+			
+		}
+		.box-issueHistory {
+			height: 194px;
 		}
 	}
 }
